...
        <scene sceneID="G3G-sY-Vfq">
            <objects>
                <viewController title="Connect to server" showSeguePresentationStyle="single" id="u9o-pp-Q96" customClass="ServerConnectController" customModule="MailEye" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" id="AEX-bU-Kz1">
                        <rect key="frame" x="0.0" y="0.0" width="506" height="357"/>
...
                            <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="cKR-AS-RB8">
                                <rect key="frame" x="24" y="112" width="92" height="32"/>
                                <buttonCell key="cell" type="push" title="Connect" bezelStyle="rounded" alignment="center" enabled="NO" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="oy8-9l-icq">
                                    <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                    <font key="font" metaFont="system"/>
...
                            <button translatesAutoresizingMaskIntoConstraints="NO" id="rTO-dq-oFU">
                                <rect key="frame" x="18" y="212" width="158" height="18"/>
                                <buttonCell key="cell" type="check" title="Flag replied messages" bezelStyle="regularSquare" imagePosition="left" inset="2" id="R7P-uK-P8Q">
                                    <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
                                    <font key="font" metaFont="system"/>
...
                            <button translatesAutoresizingMaskIntoConstraints="NO" id="gS2-IJ-4At">
                                <rect key="frame" x="18" y="192" width="258" height="18"/>
                                <buttonCell key="cell" type="check" title="Do not set messages as read on server" bezelStyle="regularSquare" imagePosition="left" inset="2" id="aF6-sE-heg">
                                    <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
                                    <font key="font" metaFont="system"/>
...
                                </menu>
                            </menuItem>
                            <menuItem title="File" id="dMs-cI-mzQ">
                                <modifierMask key="keyEquivalentModifierMask"/>
                                <menu key="submenu" title="File" id="bib-Uj-vzu">
...
                                            </connections>
                                        </menuItem>
                                        <menuItem title="Demo" id="Ktp-sC-rah">
                                            <modifierMask key="keyEquivalentModifierMask"/>
                                            <connections>
...
                                            </connections>
                                        </menuItem>
                                        <menuItem title="Open…" keyEquivalent="o" id="IAo-SY-fd9">
                                            <connections>
                                                <action selector="openDocument:" target="Ady-hI-5gd" id="bVn-NM-KNZ"/>
...
                                    </box>
                                </toolbarItem>
                                <toolbarItem implicitItemIdentifier="31DD91ED-8501-4522-9E55-96DD0C24888C" explicitItemIdentifier="msgActionReply" label="Reply / Note" paletteLabel="Reply / Note" tag="-2" image="TBReply" id="QYX-gq-CXd">
                                    <connections>
                                        <action selector="msgActionReply:" target="Oky-zY-oP4" id="xV5-oG-bsP"/>
                                    </connections>
                                </toolbarItem>
                                <toolbarItem implicitItemIdentifier="A339DFC4-51C1-4E62-B837-DBA282E88D7E" explicitItemIdentifier="msgActionDone" label="Done" paletteLabel="Done" tag="-3" image="TBDone" id="eoY-Yu-tuY">
                                    <connections>
                                        <action selector="msgActionDone:" target="Oky-zY-oP4" id="Ip7-uh-Q2a"/>
...
                            <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="2OG-Az-VGT">
                                <rect key="frame" x="231" y="7" width="133" height="32"/>
                                <buttonCell key="cell" type="push" title="Close and Save" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="42x-5s-AUX">
                                    <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                    <font key="font" metaFont="system"/>
...
                                        <button tag="4" translatesAutoresizingMaskIntoConstraints="NO" id="Bt4-GK-5jh">
                                            <rect key="frame" x="448" y="24" width="51" height="18"/>
                                            <buttonCell key="cell" type="radio" title="High" bezelStyle="regularSquare" imagePosition="left" alignment="left" inset="2" id="Wqy-Fa-vee">
                                                <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
                                                <font key="font" metaFont="system"/>
...
                                        <button tag="4" translatesAutoresizingMaskIntoConstraints="NO" id="c46-hv-EwW">
                                            <rect key="frame" x="446" y="24" width="45" height="18"/>
                                            <buttonCell key="cell" type="radio" title="Top" bezelStyle="regularSquare" imagePosition="left" alignment="left" inset="2" id="IwZ-nc-oke">
                                                <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
                                                <font key="font" metaFont="system"/>
...
                                        <button tag="1" translatesAutoresizingMaskIntoConstraints="NO" id="R35-xo-yuS">
                                            <rect key="frame" x="32" y="24" width="99" height="18"/>
                                            <buttonCell key="cell" type="radio" title="Unpleasant" bezelStyle="regularSquare" imagePosition="right" alignment="right" inset="2" id="Sw2-pV-KDR">
                                                <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
                                                <font key="font" metaFont="system"/>
...
